--- a/Plant_leaves_disease_detection.ipynb
+++ b/Plant_leaves_disease_detection.ipynb
@@ -275,7 +275,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'kaggle (1).json': b'{\"username\":\"aniketdas2003\",\"key\":\"0aa0665ff63c1479026bb2380816f194\"}'}"
+              "{'kaggle (1).json': b'{\"username\":\"",\"key\":\""}'}"
             ]
           },
           "metadata": {},
